--- a/style.css
+++ b/style.css
@@ -6,15 +6,49 @@
 body {
     font: 1em sans-serif;
     background-color: rgb(211, 211, 211);
+}
+
+/* NAVIGATION STYLING */
+
+.profile-nav {
+    background-color: white;
+    width: 100%;
+    max-width: 400px;
+    border-radius: 1rem;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 1.5rem auto;
+    padding: 1rem 0;
+}
+
+.profile-nav ul {
+    list-style-type: none;
     display: flex;
     justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    gap: 1.5rem;
+}
+
+.profile-nav a {
+    text-decoration: none;
+    padding: 1rem;
+    border-radius: 1rem;
+    color: black;
+    transition: 0.3s ease;
+}
+
+.profile-nav a:hover {
+    background: rgb(220, 220, 220);
+}
+
+.active{
+    font-weight: bold;
+    background: rgb(220, 220, 220);
 }
 
 /* PROFILE CARD STYLING */
 
 .profile-card {
+    margin: auto;
     background-color: white;
     width: 100%;
     max-width: 400px;
@@ -90,7 +124,6 @@ body {
 }
 
 .user-interests h3 {
-    color: #2d3748;
     margin: 0 0 0.5rem 0;
     margin-bottom: 0;
 }
@@ -104,6 +137,16 @@ body {
 /* Responsive design for wider screens (PC's & Tablets) */
 @media screen and (min-width:768px) {
 
+    /* NAVIGATION STYLING */
+    .profile-nav {
+        max-width: 900px;
+    }
+
+    .profile-nav ul {
+        gap: 2rem;
+    }
+
+    /* PROFILE CARD STYLING */
     .profile-card {
         flex-direction: row;
         align-items: justify;
